--- a/reversi-app/src/App.css
+++ b/reversi-app/src/App.css
@@ -6,7 +6,23 @@
   padding: 20px;
   /* max-width: 100vw; */
   box-sizing: border-box;
+  height: 100%;
 }
+
+.app-content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  /* width: 100%; */
+  overflow-y: auto; /* In case content is taller than the screen */
+}
+
+/* .login-container, .game-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+} */
+
 
 .game-container {
   display: flex;
